--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Create.cshtml
@@ -3,7 +3,7 @@
 @model AIDeploymentViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["New '{0}' rule", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["New '{0}' deployment", Model.DisplayName])</h1>
 </zone>
 
 <form method="post" enctype="multipart/form-data" class="no-multisubmit">
