--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Edit.cshtml
@@ -1,12 +1,12 @@
 @using CrestApps.OrchardCore.AI.ViewModels
 
-@model ChatProfileViewModel
+@model AIDeploymentViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Edit '{0}' rule", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["Edit '{0}' deployment", Model.DisplayName])</h1>
 </zone>
 
-<form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["id"]" enctype="multipart/form-data" class="no-multisubmit">
+<form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["providerName"]" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
     @await DisplayAsync(Model.Editor)
 
