fix deployment recipe and add deployment for OC deployments

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIChatProfileDeploymentStep.Summary.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIChatProfileDeploymentStep.Summary.cshtml
@@ -16,9 +16,9 @@
 }
 else if (profileNames?.Length > 0)
 {
-    foreach (var indexName in profileNames)
+    foreach (var profileName in profileNames)
     {
-        <span class="badge ta-badge">@indexName</span>
+        <span class="badge ta-badge">@profileName</span>
     }
 }
 else
