--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIDeploymentDeploymentStep.Fields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIDeploymentDeploymentStep.Fields.Edit.cshtml
@@ -1,31 +1,31 @@
 @using CrestApps.OrchardCore.AI.Deployments.ViewModels
 
-@model AIChatProfileDeploymentStepViewModel
+@model AIDeploymentStepViewModel
 
-<h5 class="mb-3">@T["AI Chat Profiles"]</h5>
+<h5 class="mb-3">@T["AI Deployments"]</h5>
 
 <div class="mb-3">
     <div class="form-check">
         <label class="form-check-label">
             <input class="form-check-input" asp-for="IncludeAll" data-bs-toggle="collapse" role="button" data-bs-target="#profiles-list" aria-expanded="false" aria-controls="profiles-list" />
-            @T["Include all AI chat profiles."]
+            @T["Include all AI deployments."]
         </label>
     </div>
 </div>
 
 <div id="profiles-list" class="collapse@(Model.IncludeAll ? string.Empty : " show")">
-    <div class="hint mb-1">@T["The AI chat profiles to export as part of the plan."]</div>
+    <div class="hint mb-1">@T["The AI deployments to export as part of the plan."]</div>
 
     <ul class="list-group mb-3">
-        @foreach (var profileName in Model.AllProfileNames)
+        @foreach (var deploymentName in Model.AllDeploymentName)
         {
-            var isChecked = Model.ProfileNames?.Contains(profileName);
+            var isChecked = Model.DeploymentNames?.Contains(deploymentName);
 
             <li class="list-group-item">
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox" name="@Html.NameFor(m => m.ProfileNames)" value="@profileName" checked="@isChecked">
-                        @profileName
+                        <input class="form-check-input" type="checkbox" name="@Html.NameFor(m => m.DeploymentNames)" value="@deploymentName" checked="@isChecked">
+                        @deploymentName
                     </label>
                 </div>
             </li>
