Update the docs

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfile.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfile.Buttons.SummaryAdmin.cshtml
@@ -5,7 +5,7 @@
 @model ShapeViewModel<AIProfile>
 
 <a asp-action="Edit"
-   asp-controller="ChatProfiles"
+   asp-controller="Profiles"
    asp-route-id="@Model.Value.Id"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
 
