--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileMainFields.Edit.cshtml
@@ -4,7 +4,16 @@
 @model EditProfileMainFieldsViewModel
 
 <div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="Name" class="@Orchard.GetLabelClasses()">@T["Name"]</label>
+    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Display text"]</label>
+    <div class="@Orchard.GetEndClasses()">
+        <input asp-for="DisplayText" class="form-control" />
+        <span asp-validation-for="DisplayText" class="text-danger"></span>
+        <span class="hint">@T["Profile name for the user interface."]</span>
+    </div>
+</div>
+
+<div class="@Orchard.GetWrapperClasses()">
+    <label asp-for="Name" class="@Orchard.GetLabelClasses()">@T["Technical Name"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input asp-for="Name" class="form-control" disabled="@(!Model.IsNew)" />
         <span asp-validation-for="Name" class="text-danger"></span>
@@ -16,14 +25,5 @@
         {
             <span class="hint">@T["Profile name."]</span>
         }
-    </div>
-</div>
-
-<div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="DisplayText" class="@Orchard.GetLabelClasses()">@T["Display text"]</label>
-    <div class="@Orchard.GetEndClasses()">
-        <input asp-for="DisplayText" class="form-control" />
-        <span asp-validation-for="DisplayText" class="text-danger"></span>
-        <span class="hint">@T["Profile name for the user interface."]</span>
     </div>
 </div>
