--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionTask.Fields.Thumbnail.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionTask.Fields.Thumbnail.cshtml
@@ -1,9 +1,9 @@
 @using CrestApps.OrchardCore.AI.Workflows.Models
 @using OrchardCore.Workflows.ViewModels
 
-@model ActivityViewModel<ChatUtilityCompletionTask>
+@model ActivityViewModel<AICompletionTask>
 
 <h4 class="card-title">
     <i class="fa-solid fa-pencil" aria-hidden="true"></i>
-    @T["Chat Utility Completion."]
+    @T["AI Completion."]
 </h4>
