--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Create.cshtml
@@ -2,7 +2,7 @@
 @model ProfileViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["New '{0}' rule", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["New '{0}' Profile", Model.DisplayName])</h1>
 </zone>
 
 <form method="post" enctype="multipart/form-data" class="no-multisubmit">
