--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Edit.cshtml
@@ -4,7 +4,7 @@
 @model ProfileViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Edit '{0}' rule", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["Edit '{0}' Profile", Model.DisplayName])</h1>
 </zone>
 
 <form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["id"]" enctype="multipart/form-data" class="no-multisubmit">
