Add 'AI Chat Completion API' feature

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionTask.Fields.Thumbnail.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AICompletionTask.Fields.Thumbnail.cshtml
@@ -5,5 +5,5 @@
 
 <h4 class="card-title">
     <i class="fa-solid fa-pencil" aria-hidden="true"></i>
-    @T["AI Completion."]
+    @T["AI Completion"]
 </h4>
