--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIDeploymentDeploymentStep.Fields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Items/AIDeploymentDeploymentStep.Fields.Edit.cshtml
@@ -8,7 +8,7 @@
     <div class="form-check">
         <label class="form-check-label">
             <input class="form-check-input" asp-for="IncludeAll" data-bs-toggle="collapse" role="button" data-bs-target="#profiles-list" aria-expanded="false" aria-controls="profiles-list" />
-            @T["Include all AI deployments."]
+            @T["Include all AI deployments"]
         </label>
     </div>
 </div>
