Add Streaming to the CompletionService

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIChatSessionChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIChatSessionChat.cshtml
@@ -94,7 +94,8 @@
         }
     }
 }
-
+<script asp-name="signalr" at="Foot"></script>
+<script asp-name="marked" at="Foot"></script>
 <script asp-name="OpenAIChatApp" at="Foot"></script>
 <script at="Foot" depends-on="OpenAIChatApp">
     openAIChatManager.initialize({
