--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIDeployment.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIDeployment.Link.cshtml
@@ -5,17 +5,23 @@
 @using Microsoft.Extensions.Options
 
 @inject IOptions<AIProviderOptions> Options
+@inject IOptions<AICompletionOptions> CompletopmnOptions
 @{
     string providerName = Model.ProviderName;
-    var service = ViewContext.HttpContext.RequestServices.GetKeyedService<IAIDeploymentProvider>(providerName);
+
+    if (!CompletopmnOptions.Value.Deployments.TryGetValue(providerName, out var deploymentProvider))
+    {
+        return;
+    }
+
     var hasConnections = Options.Value.Providers.TryGetValue(providerName, out var provider) && provider.Connections.Count > 0;
 }
 
 <div class="col">
     <div class="card h-100">
         <div class="card-body">
-            <h4>@(service?.DisplayName ?? providerName)</h4>
-            <p class="hint">@(service?.Description)</p>
+            <h4>@(deploymentProvider.DisplayName)</h4>
+            <p class="hint">@(deploymentProvider.Description)</p>
 
         </div>
 
