--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfile.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfile.Link.cshtml
@@ -1,23 +1,30 @@
 @using CrestApps.OrchardCore.AI.Core
 @using Microsoft.Extensions.DependencyInjection
 @using CrestApps.OrchardCore.AI
+@using Microsoft.Extensions.Options
+
+@inject IOptions<AICompletionOptions> Options
 
 @{
-    string source = Model.Source;
-    var service = ViewContext.HttpContext.RequestServices.GetKeyedService<IAIProfileSource>(source);
+    string sourceName = Model.Source;
+
+    if (!Options.Value.ProfileSources.TryGetValue(sourceName, out var source))
+    {
+        return;
+    }
 }
 
 <div class="col">
     <div class="card h-100">
         <div class="card-body">
-            <h4>@(service?.DisplayName ?? source)</h4>
-            <p class="hint">@(service?.Description)</p>
+            <h4>@(source.DisplayName)</h4>
+            <p class="hint">@(source.Description)</p>
         </div>
         <div class="card-footer text-muted text-sm-end">
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
                asp-route-controller="Profiles"
-               asp-route-source="@source">@T["Add"]</a>
+               asp-route-source="@sourceName">@T["Add"]</a>
         </div>
     </div>
 </div>
