--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Admin/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Admin/Edit.cshtml
@@ -43,14 +43,14 @@
     <div class="@Orchard.GetWrapperClasses()">
         <label asp-for="ApiKey" class="@Orchard.GetLabelClasses()">@T["API key"]</label>
         <div class="@Orchard.GetEndClasses()">
-            <input asp-for="ApiKey" class="form-control" placeholder="@T["A key has been securely stored. Provide a new one to replace the existing key or leave it blank."]" />
+            <input asp-for="ApiKey" class="form-control" autocomplete="new-password" placeholder="@T["A key has been securely stored. Provide a new one to replace the existing key or leave it blank."]" />
             <span asp-validation-for="ApiKey" class="text-danger"></span>
             <span class="hint">@T["The service API key."]</span>
         </div>
     </div>
 
     <div class="@Orchard.GetWrapperClasses()">
-        <label asp-for="DefaultDeploymentName" class="@Orchard.GetLabelClasses()">@T["Deployment name"]</label>
+        <label asp-for="DefaultDeploymentName" class="@Orchard.GetLabelClasses()">@T["Deployment/Model name"]</label>
         <div class="@Orchard.GetEndClasses()">
             <input asp-for="DefaultDeploymentName" class="form-control" />
             <span asp-validation-for="DefaultDeploymentName" class="text-danger"></span>
