Do form submission after dispatching the submit event returns success

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/PayLaterPaymentMethod.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/PayLaterPaymentMethod.Edit.cshtml
@@ -32,7 +32,9 @@
                             bubbles: true,
                             cancelable: true
                         });
-                        form.dispatchEvent(submitEvent);
+                        if (form.dispatchEvent(submitEvent)) {
+                            form.requestSubmit();
+                        }
                     } else {
                         enablePayButtonButton(payButtonElement, true);
 
