--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnection.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProviderConnection.Link.cshtml
@@ -5,11 +5,11 @@
 @using Microsoft.Extensions.Options
 
 @inject IOptions<AIProviderOptions> Options
-@inject IOptions<AICompletionOptions> CompletionOptions
+@inject IOptions<AIOptions> AIOptions
 @{
     string providerName = Model.ProviderName;
 
-    if (!CompletionOptions.Value.Deployments.TryGetValue(providerName, out var deploymentProvider))
+    if (!AIOptions.Value.Deployments.TryGetValue(providerName, out var deploymentProvider))
     {
         return;
     }
