--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/PayLaterPaymentMethod.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/PayLaterPaymentMethod.Edit.cshtml
@@ -28,11 +28,7 @@
                     const form = document.getElementById('subscription-form');
 
                     if (data.status == 'completed') {
-                        var submitEvent = new Event("submit", {
-                            bubbles: true,
-                            cancelable: true
-                        });
-                        form.dispatchEvent(submitEvent);
+                        form.requestSubmit();
                     } else {
                         enablePayButtonButton(payButtonElement, true);
 
