Add Azure OpenAI connection source

--- a/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIConnection.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIConnection.Edit.cshtml
@@ -1,8 +1,8 @@
 @using CrestApps.OrchardCore.Azure.Core.Models
-@using CrestApps.OrchardCore.AzureAIInference.ViewModels
+@using CrestApps.OrchardCore.OpenAI.Azure.ViewModels
 @using OrchardCore
 
-@model AzureAIInferenceConnectionViewModel
+@model AzureOpenAIConnectionViewModel
 @{
     var apiKeyWrapperId = Html.IdFor(m => m.ApiKey) + "_wrapper";
 }
