--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
@@ -127,7 +127,7 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-dark rounded-circle" type="button" id="@buttonHtmlId" disabled>
+                    <button class="btn btn-dark rounded-circle" type="button" id="@buttonHtmlId" disabled data-start-icon="<i class='fa-solid fa-arrow-up'></i>" data-stop-icon="<i class='fa-solid fa-stop'></i>">
                         <i class="fa-solid fa-arrow-up"></i>
                     </button>
                 </div>
