--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Profiles/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using OrchardCore.DisplayManagement
 
-@model ListModelViewModel<AIProfile>
+@model ListSourceModelViewModel<AIProfile>
 
 <zone Name="Title"><h1>@RenderTitleSegments(T["AI Profiles"])</h1></zone>
 
