--- a/src/Modules/CrestApps.OrchardCore.AI/Views/ToolInstances/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/ToolInstances/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using OrchardCore.DisplayManagement
 
-@model ListModelViewModel<AIToolInstance>
+@model ListSourceModelViewModel<AIToolInstance>
 
 <zone Name="Title"><h1>@RenderTitleSegments(T["AI Tool Instances"])</h1></zone>
 
